--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
+    "@vercel/analytics": "^1.4.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "emailjs-com": "^3.2.0",
